THRIFT-1788 C#: Constants static constructor does not compile Patch: Carl Yeksigian